DevOps/Cloud/k8s/base/datamgmt-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: datamgmt
  namespace: rhc-rag
  labels:
    app.kubernetes.io/name: datamgmt-service
    app.kubernetes.io/part-of: regulated-healthcare-rag
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: datamgmt-service
  ports:
    - name: http
      port: 8001
      targetPort: http
      protocol: TCP
