DevOps/Cloud/k8s/base/ragmgmt-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ragmgmt
  namespace: rhc-rag
  labels:
    app.kubernetes.io/name: ragmgmt-service
    app.kubernetes.io/part-of: regulated-healthcare-rag
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ragmgmt-service
  ports:
    - name: http
      port: 8002
      targetPort: http
      protocol: TCP
